# coding-models-mlops

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: generate_cli-checkpoint.ipynb  notebook-checkpoint.ipynb
62/b32818ebcd/: metadata.json
62/b32818ebcd/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/10/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/11/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/3/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/4/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/5/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/b32818ebcd/6/: content_hash.txt  context.md  full.jsonl  metadata.json  (+1 more)
68/76739b0302/: metadata.json
a7/7c6fb97499/: metadata.json
d9/0ebb3ac1fc/: metadata.json
docker/mlflow/: Dockerfile
k8s/: configmap.yaml  prompts-configmap.yaml  secret.example.yaml
k8s/mlflow/: deployment.yaml  pvc.yaml  service.yaml
k8s/vllm/: inferenceservice.yaml
notebooks/: 0_generate_cli.ipynb  generate_cli.ipynb
prompts/: cli_generation.txt
scripts/: setup.sh  setup_env.sh  setup_jupyter.sh  setup_kserve_knative.sh  setup_minikube.sh  setup_mlflow.sh  setup_vllm.sh
(+41 files in other folders)
